<resources>
    <string name="app_name">Eventhub</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Eventhub</string>
    <string name="nav_header_subtitle">rubus.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="signin_register">Signin/Register</string>
    <string name="create_event">Create Event</string>
    <string name="myprofile">My profile</string>
    <string name="btn_login_student">Login As Student</string>
    <string name="btn_login_college">Login As College</string>
    <string name="btn_register_student">Register As Student</string>
    <string name="btn_register_college">Register As College</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password">Forgot your password</string>
    <string name="btn_link_to_register">Not Registered! Create One</string>
    <string name="btn_link_to_login">Already Registered! Login Me</string>
    <string name="hint_name">Name</string>
    <string name="hint_college">College</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>

    <!-- Strings related to Create event Activity -->

    <string name="hint_title">Event Title</string>
    <string name="banner_title">EVENT BANNER</string>
    <string name="image_upload_description1">Maximum image size is 500kb</string>
    <string name="image_upload_description2">Recommended size 1200 * 450 pixels</string>
    <string name="upload_image">upload banner image</string>
    <string name="description">Description</string>
    <string name="venue">Venue</string>
    <string name="phone_numbe">Phone Number</string>
    <string name="select_date_start">SELECT DATE   (Start From)</string>
    <string name="select_date_end">SELECT DATE (End)</string>
    <string name="select_time">SELECT TIME </string>
    <string name="action_logout">logout</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="time_format">hh:mm</string>
    <string name="website">Website Address</string>


</resources>
