<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_selection">




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">




        <!-- Login Button -->

        <Button
            android:id="@+id/btn_register_student"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/btn_register_student"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_register_college"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/btn_register_college"
            android:textStyle="bold"
            android:textColor="@android:color/white" />


        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>