<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_event">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/banner_thumbnail"
                android:layout_width="80dp"
                android:layout_height="70dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="65dp"
                android:layout_marginEnd="19dp"
                android:layout_marginRight="19dp"
                android:contentDescription="@string/banner_title"
                android:src="@drawable/placeholder_banner"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line1"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:text="@string/image_upload_description1"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/banner_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="20dp"
                android:text="@string/banner_title"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/line1"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_height="1.4dp"
                android:layout_below="@+id/banner_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimary"

                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/image_upload_description2"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@id/textView2"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_bg_rounded_corners"
                android:text="@string/upload_image"
                android:textColor="@android:color/white" />


            <TextView
                android:id="@+id/line2"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="1.4dp"
                android:layout_below="@+id/btn_upload"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"

                />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/line2"
                android:layout_marginTop="10dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/dummyfocus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/event_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_title"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/college"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/hint_college"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:inputType="textMultiLine"

                        />

                </android.support.design.widget.TextInputLayout>


                <com.isapanah.awesomespinner.AwesomeSpinner
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:spinnerDirection="ltr"
                    app:spinnerHint="Select Category" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/venue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/venue"
                        android:inputType="textMultiLine"

                        />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear"
                android:layout_marginTop="10dp"
                android:orientation="vertical"

                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/select_date_start"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/date1"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/date_format"
                        android:textAlignment="center" />

                    <ImageButton
                        android:id="@+id/calender1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@null"
                        android:tint="@color/colorPrimary"
                        app:srcCompat="@drawable/ic_today" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/select_date_end"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/date2"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/date_format"
                        android:textAlignment="center" />

                    <ImageButton
                        android:id="@+id/calender2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@null"
                        android:tint="@color/colorPrimary"
                        app:srcCompat="@drawable/ic_today" />


                </LinearLayout>

                <TextView
                    android:id="@+id/line3"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/select_time"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/time1"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/time_format"
                        android:textAlignment="center" />

                    <ImageButton
                        android:id="@+id/clock1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@null"
                        android:tint="@color/colorPrimary"
                        app:srcCompat="@drawable/ic_time" />

                </LinearLayout>

                <TextView
                    android:id="@+id/line4"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary" />
            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/last"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date_time"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_numbe"
                    android:inputType="phone"
                    android:layout_marginTop="5dp"

                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/last1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/last"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/website"
                    android:inputType="text"
                    android:layout_marginTop="5dp"

                    />

            </android.support.design.widget.TextInputLayout>





            <Button
                android:id="@+id/btn_create_event"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_below="@id/last1"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_bg_rounded_corners"
                android:text="@string/create_event"
                android:textColor="@android:color/white" />


            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone"/>

            <TextView
            android:id="@+id/dummyfocus2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_create_event"
             android:layout_marginTop="20dp"
                />

        </RelativeLayout>


    </ScrollView>


</android.support.design.widget.CoordinatorLayout>